header mobile overflow fixed :stars: :cupid: :stars:

--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -3,6 +3,7 @@ header {
   height: 50%;
   border-bottom: 2px solid $primary;
   margin-bottom: 20px;
+  overflow: hidden;
 }
 
 // :root {
